--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 pages:
   stage: deploy
   script:
-    - cp index.html build
+    - cp ./build/index.html public
   artifacts:
     paths:
       - build
